openmediavault (6.0.4-1) unstable; urgency=low

  * Fix lock file issue in SMB recycle dir script.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 18 Nov 2021 01:10:46 +0100

openmediavault (6.0.3-1) unstable; urgency=low

  * Various improvements.
  * Fix a bug in 'Storage | Disks' page when clicking an action
    button.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 16 Nov 2021 21:15:30 +0100

openmediavault (6.0.2-1) unstable; urgency=low

  * Replace CLI tool omv-update by omv-upgrade.
  * Fixed a routing problem in the workbench that only
    affected plugins.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 14 Nov 2021 20:11:25 +0100

openmediavault (6.0.1-1) unstable; urgency=low

  * Fix issue when editing a power management task.
  * Issue #1127: Support ed25519 SSH public keys in the user
    settings dialog.
  * Issue #1137: Display escaped HTML characters correctly.
  * Issue #1138: Fix wireless network interface UI routing issue.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 09 Nov 2021 00:17:47 +0100

openmediavault (6.0-34) unstable; urgency=low

  * Reimplement UI.
  * /dev/disk/by-label filesystem device files are not supported
    anymore because they are not unique and predictable.
  * The file system page will only show file systems configured
    by OMV from now on. This is the standard behavior of the user
    interface that all other pages use.
  * Adapt 'FileSystemMgmt' RPCs to new workflow.
  * Upgrade to Debian 11.
    - Replace pam_tally2 by pam_faillock
  * Introduce environment variable OMV_POSTFIX_MAIN_DEFAULT_TRANSPORT.
    To deactivate the sending of emails without affecting the
    additional notification sinks set it to 'discard'.
  * Add option to FTP settings to display the home directory of the
    user in the browse list.
  * Add environments variables OMV_POWERMGMT_REBOOT, OMV_POWERMGMT_POWEROFF,
    OMV_POWERMGMT_SUSPEND, OMV_POWERMGMT_HIBERNATE and